daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N17_insufficient_domain_count/h0.hex
0c6721c44695816149f013c6b6d1431a64afd3114afe59509682166fd911404c48887b1a9c6e9d1c29d04d29880197e002744019fb4e0b2068a5a7779116a5b9
